feat(validation): Implemented zod validation and validation middleware
